Update with new practicals

--- a/_notebooks/01-access-assess.ipynb
+++ b/_notebooks/01-access-assess.ipynb
@@ -20,9 +20,9 @@
     "\n",
     "Cambridge\n",
     "\n",
-    "### 2024-11-01"
+    "### 2024-11-05"
    ],
-   "id": "2bd2f506-2058-44c4-b2cd-91f54c94df60"
+   "id": "9dd0df0a-e402-4fbd-82de-ccb296d82b53"
   },
   {
    "cell_type": "markdown",
@@ -32,7 +32,7 @@
     "creating and populating a database, and making joins between different\n",
     "tables."
    ],
-   "id": "2a78b86b-613b-42ad-adfa-d3d4e5f0bf92"
+   "id": "4c8af11f-492d-4c63-8b04-eb49ec29f4b9"
   },
   {
    "cell_type": "markdown",
@@ -41,7 +41,7 @@
     "$$\n",
     "$$"
    ],
-   "id": "d3750e59-598a-40e4-b426-adab4fdca659"
+   "id": "f4b21ccf-7ee0-4a35-aad2-8828f7c5397b"
   },
   {
    "cell_type": "markdown",
@@ -75,7 +75,7 @@
     "    resembles real-world data science and software engineering\n",
     "    challenges, where there might not be a unique correct solution."
    ],
-   "id": "b8871738-be4e-445e-a2f9-eb134592a135"
+   "id": "e84f6be6-a5d7-4fe1-8927-16aa14606028"
   },
   {
    "cell_type": "markdown",
@@ -121,13 +121,13 @@
     "It looks at revenue that suggests Amazon retains 40% with Microsoft\n",
     "second largest on 20%."
    ],
-   "id": "fd713224-6b4f-4dea-a1c1-d5338dfc4220"
+   "id": "a9edc746-433c-4f0a-80e5-eb5a53911e58"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UK Housing Datasets\n",
+    "## UK Housing Datasets\n",
     "\n",
     "<span class=\"editsection-bracket\"\n",
     "style=\"\">\\[</span><span class=\"editsection\"\n",
@@ -144,7 +144,7 @@
     "splitted data because these files is less than 100MB each which makes\n",
     "them easier to manage."
    ],
-   "id": "0f461544-bf69-4acb-a5ca-790c9bdc0cdd"
+   "id": "f3430e5f-888e-497f-9013-d80aefdeee87"
   },
   {
    "cell_type": "code",
@@ -154,7 +154,7 @@
    "source": [
     "import requests"
    ],
-   "id": "baff4c05-b052-4691-85b8-efe11e37e211"
+   "id": "562931ce-509c-48c3-96ea-3e2110ef3f3c"
   },
   {
    "cell_type": "code",
@@ -165,7 +165,7 @@
     "# Base URL where the dataset is stored \n",
     "base_url = \"http://prod.publicdata.landregistry.gov.uk.s3-website-eu-west-1.amazonaws.com\""
    ],
-   "id": "4e7f3f01-28c7-4478-921e-191a0e7a1019"
+   "id": "c9a0d4b9-e98e-41ea-b4cb-fc65e251763d"
   },
   {
    "cell_type": "code",
@@ -187,7 +187,7 @@
     "                with open(\".\" + file_name.replace(\"<year>\", str(year)).replace(\"<part>\", str(part)), \"wb\") as file:\n",
     "                    file.write(response.content)"
    ],
-   "id": "871718cd-0169-4769-915e-60231abc7c57"
+   "id": "3706f0cb-538f-4e42-8d51-d7eb56666417"
   },
   {
    "cell_type": "markdown",
@@ -195,7 +195,7 @@
    "source": [
     "Now we can call the function to download data between specified years:"
    ],
-   "id": "fc822ef4-8178-4ff3-ad31-113b530dc1f0"
+   "id": "4156eb49-d980-470e-8551-4420407ed943"
   },
   {
    "cell_type": "code",
@@ -205,7 +205,7 @@
    "source": [
     "download_price_paid_data(1995, 2020)"
    ],
-   "id": "1075c670-cbb0-4498-9574-21e2cf9b286e"
+   "id": "83bb5c01-d17a-4f9a-b66d-368b8f058042"
   },
   {
    "cell_type": "markdown",
@@ -216,7 +216,7 @@
     "Add this function to your fynesse library and download the data from\n",
     "2021 to 2024 using your library."
    ],
-   "id": "15107a56-4b42-442f-ba51-2bf9607c69f2"
+   "id": "7b9a279a-4168-4cde-8723-dfbc99fce164"
   },
   {
    "cell_type": "markdown",
@@ -226,7 +226,7 @@
     "\n",
     "Write your answer to Exercise 1 here"
    ],
-   "id": "0c8915ac-3046-4a81-84f1-6b243d7042ad"
+   "id": "5478bd73-5e57-41d1-bf7b-46d2c3fa5eb1"
   },
   {
    "cell_type": "code",
@@ -237,7 +237,7 @@
     "# Use this box for any code you need\n",
     "\n"
    ],
-   "id": "6e913b3f-bb38-46f0-81f4-3cdd17368b54"
+   "id": "166166df-eb3e-4b26-987e-e85407426de5"
   },
   {
    "cell_type": "markdown",
@@ -267,7 +267,7 @@
     "interrupted connections with the AWS server), you can use a local IDE to\n",
     "work in your machine.\\*\\*\\*"
    ],
-   "id": "11ef1141-02f6-4902-870f-55ab7c622009"
+   "id": "cbaa50aa-b4f5-48d7-90c5-85b7d0d228a2"
   },
   {
    "cell_type": "markdown",
@@ -329,7 +329,7 @@
     "any IP address can access the database, but that is *not good practice*\n",
     "for production systems."
    ],
-   "id": "92e2ae83-bde5-4a7b-b319-82c06be03d5c"
+   "id": "be140866-7223-4f2b-a7d8-7002771fe315"
   },
   {
    "cell_type": "markdown",
@@ -351,7 +351,7 @@
     "will also score the URL and port of your database. You can get these\n",
     "details from your database connectivity and security details."
    ],
-   "id": "b9b1da92-a4e3-40e1-810f-9bfe6e4d90c2"
+   "id": "c1a7bbd0-7018-40de-8293-9ab79fdba8e6"
   },
   {
    "cell_type": "code",
@@ -362,7 +362,7 @@
     "import yaml\n",
     "from ipywidgets import interact_manual, Text, Password"
    ],
-   "id": "4e79d79f-6779-4b48-9001-e289c4c57f75"
+   "id": "538a60f4-7212-48ac-a9e6-9439b5883638"
   },
   {
    "cell_type": "code",
@@ -382,7 +382,7 @@
     "                           'port': port}\n",
     "        yaml.dump(credentials_dict, file)"
    ],
-   "id": "3932b091-ea68-417a-80ca-83a32242ac34"
+   "id": "eede4860-c6db-43d9-84c6-a1d8739c6a16"
   },
   {
    "cell_type": "markdown",
@@ -393,7 +393,7 @@
     "\n",
     "Then, we can read the server credentials using:"
    ],
-   "id": "029e2f82-a751-4dbc-9de7-80566c91be93"
+   "id": "5b38a807-820c-4eb2-ac7e-8cc8549bafe3"
   },
   {
    "cell_type": "code",
@@ -408,7 +408,7 @@
     "url = credentials[\"url\"]\n",
     "port = credentials[\"port\"]"
    ],
-   "id": "bf82021c-3a38-4dbf-8362-a575a070d290"
+   "id": "be9174a9-c812-47aa-8fae-ecf2695f4cb7"
   },
   {
    "cell_type": "markdown",
@@ -420,7 +420,7 @@
     "There are mainly two ways how we can do that. The first one is using\n",
     "magic SQL commands. For this option, we need to load the sql extension:"
    ],
-   "id": "afd43de3-afab-40e7-b916-2677ab9210f4"
+   "id": "e94fd823-506a-4442-ad76-acbca18adde4"
   },
   {
    "cell_type": "code",
@@ -430,7 +430,7 @@
    "source": [
     "%load_ext sql"
    ],
-   "id": "52c97948-77c9-44cb-aa3c-7947a5ac2d55"
+   "id": "cdb19623-8a8b-4e4d-9040-c9e15c1cead2"
   },
   {
    "cell_type": "markdown",
@@ -441,7 +441,7 @@
     "databases. For now, you should see the databases that the engine has\n",
     "installed by default."
    ],
-   "id": "00ea1bd5-a885-4a83-8ca4-0169f6a0ee61"
+   "id": "3f073824-a933-43c4-8498-4efbe1f06e55"
   },
   {
    "cell_type": "code",
@@ -452,7 +452,7 @@
     "%sql mariadb+pymysql://$username:$password@$url?local_infile=1\n",
     "%sql SHOW databases"
    ],
-   "id": "a4b581fb-2086-415f-9948-81a0cc2264e4"
+   "id": "849e7a9d-7418-416a-879f-5f18529c2fdc"
   },
   {
    "cell_type": "markdown",
@@ -461,7 +461,7 @@
     "This connection also enables the uploading of local files as part of the\n",
     "connection (i.e., `local_infile=1`). We will use this property later."
    ],
-   "id": "5f352364-3f13-4db9-99f6-1f4f62685e4a"
+   "id": "5441f7ee-2ee2-4539-9caf-636c18ae3dbe"
   },
   {
    "cell_type": "markdown",
@@ -479,7 +479,7 @@
     "during this course. We will use SQL code for this and once again magic\n",
     "commands:"
    ],
-   "id": "085681a9-4630-4669-9af3-77688c235eef"
+   "id": "4db72f64-15d9-4e61-bc0c-d424e0c5062c"
   },
   {
    "cell_type": "code",
@@ -493,7 +493,7 @@
     "\n",
     "CREATE DATABASE IF NOT EXISTS `ads_2024` DEFAULT CHARACTER SET utf8 COLLATE utf8_bin;"
    ],
-   "id": "8a232270-0290-41f5-ad83-a302369b446b"
+   "id": "c8a4d04e-0728-483d-af07-91d54dc8a241"
   },
   {
    "cell_type": "code",
@@ -503,7 +503,7 @@
    "source": [
     "%sql SHOW databases"
    ],
-   "id": "594da826-5677-4156-b7f5-ce2324430c7e"
+   "id": "68f8edae-1c42-4184-8fd4-b11834bac5cd"
   },
   {
    "cell_type": "markdown",
@@ -513,7 +513,7 @@
     "database we will use. You will need to run this command after you create\n",
     "a new connection:"
    ],
-   "id": "1d0dfb29-8fb6-42af-8e39-bc16e154536c"
+   "id": "6d5e8cb0-0723-45d7-8126-924c3f216e61"
   },
   {
    "cell_type": "code",
@@ -524,7 +524,7 @@
     "%%sql\n",
     "USE `ads_2024`;"
    ],
-   "id": "36f91cae-13e9-4549-ba28-3c0e7d052823"
+   "id": "bbfdef43-64e1-42d9-95ee-31ddbc6d8363"
   },
   {
    "cell_type": "markdown",
@@ -542,7 +542,7 @@
     "Also, we should a look at the data. Let’s do that for the second\n",
     "semester of 2021."
    ],
-   "id": "2bad1425-f179-4e72-83c1-cf1ca9122c1b"
+   "id": "7e0a13ef-5d89-496a-bc3c-1f7bc9b875a8"
   },
   {
    "cell_type": "code",
@@ -552,7 +552,7 @@
    "source": [
     "import pandas as pd"
    ],
-   "id": "0b0bdc53-3672-40e3-aaad-b210221b56a2"
+   "id": "036206d2-6be8-4afe-b0aa-27376c115f60"
   },
   {
    "cell_type": "code",
@@ -564,7 +564,7 @@
     "data = pd.read_csv(file_name)\n",
     "data.info(verbose=True)"
    ],
-   "id": "cc8d6237-8d15-412e-9141-3748ea24694c"
+   "id": "47871bc2-3dab-4185-8787-6df088ce2da2"
   },
   {
    "cell_type": "markdown",
@@ -574,7 +574,7 @@
     "equivalent `schema` of the table in the SQL database. We will use once\n",
     "more SQL magic commands to create a table with the equivalent `schema`:"
    ],
-   "id": "c4e516e5-7884-413c-8788-bbe26b617f25"
+   "id": "12362b0c-8ed8-4bae-8732-1059bedc6001"
   },
   {
    "cell_type": "code",
@@ -609,7 +609,7 @@
     "  `db_id` bigint(20) unsigned NOT NULL\n",
     ") DEFAULT CHARSET=utf8 COLLATE=utf8_bin AUTO_INCREMENT=1 ;"
    ],
-   "id": "385ec242-82b5-462d-9adb-b2aea4ae47b9"
+   "id": "adfa304b-7cb1-4a06-954a-dc5901d918e2"
   },
   {
    "cell_type": "markdown",
@@ -631,7 +631,7 @@
     "additional fields for geospace applications, including postcode area,\n",
     "postcode district, postcode sector, incode, and outcode."
    ],
-   "id": "445b3d44-e7f2-467e-b149-243e139fc3c2"
+   "id": "ef4736d4-93fd-4a88-b0d6-76e95fc206c8"
   },
   {
    "cell_type": "markdown",
@@ -647,7 +647,7 @@
     "You may find the following schema useful for the postcode data\n",
     "(developed by Christian and Neil)"
    ],
-   "id": "5ed3bdf9-132a-428c-a8ad-ef730ce00248"
+   "id": "6e715d5c-cba3-4593-9704-793e3bac3e50"
   },
   {
    "cell_type": "markdown",
@@ -657,7 +657,7 @@
     "\n",
     "Write your answer to Exercise 2 here"
    ],
-   "id": "b0df0646-1fbc-49eb-a948-42e315b0acd8"
+   "id": "c80c79f2-750d-4cc7-a2ce-35d21f9ee7b0"
   },
   {
    "cell_type": "code",
@@ -668,7 +668,7 @@
     "# Use this box for any code you need\n",
     "\n"
    ],
-   "id": "d868f6d7-0969-40ba-92c4-e8015b732027"
+   "id": "593226b0-7f92-42df-950d-3eec4ad09524"
   },
   {
    "cell_type": "code",
@@ -701,7 +701,7 @@
     "  `db_id` bigint(20) unsigned NOT NULL\n",
     ") DEFAULT CHARSET=utf8 COLLATE=utf8_bin;"
    ],
-   "id": "67af0e70-28a0-4e37-ba76-2f676fc0efe7"
+   "id": "a400b447-caf5-4ac3-8990-940a7be187bd"
   },
   {
    "cell_type": "markdown",
@@ -709,7 +709,7 @@
    "source": [
     "And again you’ll want to set up a primary key for the new table."
    ],
-   "id": "50ee9760-f2fa-4aee-95c7-dd0ee121aa29"
+   "id": "302d6431-1fe3-43b0-bf7b-68f26e37f49a"
   },
   {
    "cell_type": "code",
@@ -723,7 +723,7 @@
     "ALTER TABLE `postcode_data`;\n",
     "MODIFY `db_id` bigint(20) unsigned NOT NULL AUTO_INCREMENT,AUTO_INCREMENT=1;"
    ],
-   "id": "5a647bc1-f863-495f-b92c-ddbbe9d17eb8"
+   "id": "367ba5bd-cec6-4a5f-8686-7fd17700eb06"
   },
   {
    "cell_type": "markdown",
@@ -731,7 +731,7 @@
    "source": [
     "And you can load the CSV file into the table using this command."
    ],
-   "id": "dbf83da7-e456-4211-858f-187ca08ed5ac"
+   "id": "1d269985-2865-441f-944b-d84c475ca5c1"
   },
   {
    "cell_type": "code",
@@ -743,7 +743,7 @@
     "FIELDS TERMINATED BY ',' OPTIONALLY ENCLOSED by '\"'\n",
     "LINES STARTING BY '' TERMINATED BY '\\n';"
    ],
-   "id": "0fbfc01b-d3bf-4ea9-8888-924565519d7a"
+   "id": "f973a73b-3457-4a62-a86c-67b94f5c4606"
   },
   {
    "cell_type": "markdown",
@@ -778,7 +778,7 @@
     "`postcode` column. It makes sense then to create an index for these\n",
     "columns. The following code indexes the table `pp_data` by `postcode`."
    ],
-   "id": "b42f7402-7c4e-4bc7-8745-8087659c7bbe"
+   "id": "7e684497-cc77-4a91-95f4-03bce33e0140"
   },
   {
    "cell_type": "code",
@@ -792,7 +792,7 @@
     "USE `ads_2024`;\n",
     "CREATE INDEX idx_pp_postcode ON pp_data(postcode);"
    ],
-   "id": "832e5ea9-8743-4cf6-9753-bc4fdc0ec655"
+   "id": "39ad5670-ee15-4b31-acff-a75adc3bcb9b"
   },
   {
    "cell_type": "markdown",
@@ -800,7 +800,7 @@
    "source": [
     "Let’s try our join the tables for year 2024 now:"
    ],
-   "id": "5da84530-6f8b-4b0d-9deb-b23334e12820"
+   "id": "0a8aee55-557d-4e37-9e3b-1af0527f5adc"
   },
   {
    "cell_type": "code",
@@ -812,7 +812,7 @@
     "USE `ads_2024`;\n",
     "select * from pp_data as pp inner join postcode_data as po on pp.postcode = po.postcode where pp.date_of_transfer BETWEEN '2024-01-01' AND '2024-12-31' limit 5;"
    ],
-   "id": "25f80ab2-b3a3-4d9b-8c57-eb4f32f7b7ac"
+   "id": "70a29d35-7fd2-46b3-9d34-472bd6d30df8"
   },
   {
    "cell_type": "markdown",
@@ -824,7 +824,7 @@
     "finish. Let’s see if indexing the table `postcode_data` by `postcode`\n",
     "has any additional effect."
    ],
-   "id": "da808bd8-8c6e-4c1e-b49f-754bfbfdfc0e"
+   "id": "d0702fbb-996f-459a-8600-786107de7092"
   },
   {
    "cell_type": "markdown",
@@ -834,7 +834,7 @@
     "\n",
     "Write your answer to Exercise 3 here"
    ],
-   "id": "13be336a-765f-4207-b107-f6148dca8a1a"
+   "id": "5311e72f-4979-4af0-b7cf-22365e6bdd6a"
   },
   {
    "cell_type": "code",
@@ -845,7 +845,7 @@
     "# Use this box for any code you need\n",
     "\n"
    ],
-   "id": "ce01b883-2c43-4886-b461-4c631e2e92f8"
+   "id": "e3f97d20-cdc8-40ff-8332-c289b3b4473a"
   },
   {
    "cell_type": "markdown",
@@ -853,7 +853,7 @@
    "source": [
     "And, let’s try the join again:"
    ],
-   "id": "5ff0788d-26f8-4b5e-bb40-a01da763ded7"
+   "id": "ccacdf16-2460-4948-80e4-4dddcdd358e9"
   },
   {
    "cell_type": "code",
@@ -865,7 +865,7 @@
     "USE `ads_2024`;\n",
     "select * from pp_data as pp inner join postcode_data as po on pp.postcode = po.postcode where pp.date_of_transfer BETWEEN '2024-01-01' AND '2024-12-31' limit 5;"
    ],
-   "id": "429f08bd-4566-4f5b-b199-496ba7d8cbbc"
+   "id": "bad7c685-312b-43bd-bf16-2bbe221fc14c"
   },
   {
    "cell_type": "markdown",
@@ -873,7 +873,7 @@
    "source": [
     "Do you see any difference after adding the new index? Why?"
    ],
-   "id": "955c1625-e407-47fc-8dde-51d2703034e2"
+   "id": "6b17dc3b-74c3-45d4-9333-15ab37b4ff88"
   },
   {
    "cell_type": "markdown",
@@ -886,7 +886,7 @@
     "our database server. For this, we need to install the following\n",
     "libraries."
    ],
-   "id": "67a0be0b-cd36-40e9-89ad-052684f7683e"
+   "id": "9e7b982e-0619-4902-9cba-b4ce5549277d"
   },
   {
    "cell_type": "code",
@@ -896,7 +896,7 @@
    "source": [
     "%pip install ipython-sql"
    ],
-   "id": "d6da7ec1-d6c1-4b72-8f90-10653831dd55"
+   "id": "a6281fce-cefc-456b-a670-3322fa6146d4"
   },
   {
    "cell_type": "code",
@@ -906,7 +906,7 @@
    "source": [
     "%pip install PyMySQL"
    ],
-   "id": "4771152f-9065-4120-8463-8a4f11384003"
+   "id": "4879ce5a-aae0-4011-9c7f-3d6edb8042be"
   },
   {
    "cell_type": "markdown",
@@ -915,7 +915,7 @@
     "Let’s create a method in Python to establish a database connection\n",
     "wherever we like. It should look like the following code:"
    ],
-   "id": "84bbd1c3-3d77-45a0-8458-f63065c55dac"
+   "id": "e4fbbcc0-a81b-4ce2-aea6-5a6e397c3c52"
   },
   {
    "cell_type": "code",
@@ -925,7 +925,7 @@
    "source": [
     "import pymysql"
    ],
-   "id": "5581ee42-e123-443c-ae7a-4f2bee3789ae"
+   "id": "f6e2605c-d238-40c3-8cde-c2a2a04554a1"
   },
   {
    "cell_type": "code",
@@ -957,7 +957,7 @@
     "        print(f\"Error connecting to the MariaDB Server: {e}\")\n",
     "    return conn"
    ],
-   "id": "c04c0871-9e8a-47dd-bca4-83ced60d5512"
+   "id": "a113dd7f-c41f-47c6-851c-33179e358f76"
   },
   {
    "cell_type": "markdown",
@@ -971,7 +971,7 @@
     "`postcode_data`. For this, we first need to create the table that will\n",
     "store this data."
    ],
-   "id": "d12605a2-1603-4f10-8d1d-d777957d04e8"
+   "id": "42310577-047e-497b-8264-e5ac43c5dfe4"
   },
   {
    "cell_type": "code",
@@ -1002,7 +1002,7 @@
     "  `db_id` bigint(20) unsigned NOT NULL\n",
     ") DEFAULT CHARSET=utf8 COLLATE=utf8_bin AUTO_INCREMENT=1 ;"
    ],
-   "id": "2fde8c8d-e80c-4768-9916-ab796aae2c24"
+   "id": "dae8306f-ad65-4a3c-ac94-90cf7d0aa78a"
   },
   {
    "cell_type": "markdown",
@@ -1022,7 +1022,7 @@
     "-   blog:\n",
     "    [http://inverseprobability.com](http://inverseprobability.com/blog.html)"
    ],
-   "id": "ffefb043-9d76-4d44-aae2-dececd0f1f27"
+   "id": "dcdf1e35-4396-4c5e-a224-3b305e13277f"
   },
   {
    "cell_type": "markdown",
@@ -1030,7 +1030,7 @@
    "source": [
     "## References"
    ],
-   "id": "361754a5-206d-42c8-acc7-8c2fcbc250d6"
+   "id": "b41f2e7f-f015-4184-9d04-f6462083235e"
   }
  ],
  "nbformat": 4,
